# SPDX-FileCopyrightText: 2022 Sebastian Wagner
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[metadata]
name = intelmq-certbund-contact
description =  IntelMQ expert bots to lookup contact information in a database (part of the intelmq-cb-mailgen solution). 
author = Intevation GmbH
maintainer = Intevation GmbH
maintainer_email = sebastian.wagner@intevation.de
url = https://github.com/Intevation/intelmq-certbund-contact
license =  AGPL-3.0-or-later
license_file = LICENSE
long_description = file: README.md
