# SPDX-FileCopyrightText: 2022-2025 Intevation GmbH
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[pep8]
ignore = E221, E722, W504, E501

[pycodestyle]
ignore = E221, E722, W504, E501

[flake8]
ignore = E221, E722, W504, E501
exclude =
    .git/,
    debian/,
    build/,
    dist/,
    tests/

[pylint.FORMAT]
max-line-length = 200

[metadata]
name = intelmq-certbund-contact
description =  IntelMQ expert bots to lookup contact information in a database (part of the intelmq-cb-mailgen solution). 
author = Intevation GmbH
maintainer = Intevation GmbH
maintainer_email = sebastian.wagner@intevation.de
url = https://github.com/Intevation/intelmq-certbund-contact
license =  AGPL-3.0-or-later
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
